# smart-home-control-panel

./: .gitignore  CMakeLists.txt  README.md  ha_states.json  init.txt  pytest_rgb_panel_lvgl.py  weather_raw.json
.agent/rules/: up.md
.trae/documents/: 使用LVGL 9的XML模式创建界面.md  修复LVGL看门狗超时问题.md  修复封面图无法更新的问题.md  实现MQTT服务功能.md  实现真实能耗数据显示.md  恢复项目到只保留初始化完毕屏幕的状态.md
.trae/rules/: project_rules.md
.trae/skills/docs-query/: SKILL.md
main/: CMakeLists.txt  idf_component.yml
main/drivers/: st7701s.c  st7701s.h
main/fonts/: time_100.c
main/images/: uiIcons.c
main/include/: album_art_manager.h  esp32_mqtt_client.h  event_system.h  homeassistant.h  http_service.h  ntp_time.h  smart_control_panel_config.h  smart_control_panel_init.h
main/screens/main/: main.xml  main_screen.c  main_screen.h
main/src/: album_art_manager.c  event_system.c  homeassistant.c  http_service.c  mqtt_client.c  ntp_time.c  smart_control_panel_init.c  smart_control_panel_main.c
main/ui/: ui_common.c  ui_common.h  ui_manager.c  ui_manager.h
